test/interaction/Issue8103.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : v ≡ true" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue8103.agda:8.7-22: error: [Interaction.ExpectedApplication] Expected an argument of the form f e1 e2 .. en when checking that the expression ? has type v ≡ true" nil)
((last . 3) . (agda2-maybe-goto '("Issue8103.agda" . 184)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
